# uavff3d_evaluate_forward_models

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_MapAnything.md  THIRD_PARTY.md  git_third_party.sh  pyproject.toml  setup.py  train.md
bash_scripts/benchmark/calibration/: mapa_depth_completion.sh  mapanything.sh  vggt.sh
bash_scripts/benchmark/dense_2_view/: mapa_24v.sh  mapa_4v.sh
bash_scripts/benchmark/dense_n_view/: da3.sh  da3_csfm.sh  da3_mvs.sh  da3_nested.sh  da3_nested_csfm.sh  da3_nested_mvs.sh  hunyuan.sh  mapa_24v.sh  mapa_24v_apache.sh  mapa_24v_csfm.sh  mapa_24v_csfm_apache.sh  mapa_24v_dc.sh  mapa_24v_dc_apache.sh  mapa_24v_mvs.sh  mapa_24v_mvs_apache.sh  mapa_24v_mvs_nm.sh  mapa_24v_nmp_md.sh  mapa_24v_nmp_md_sparse.sh  mapa_24v_nmp_nmd.sh  mapa_24v_nmp_nmd_sparse.sh  mapa_24v_psfm.sh  mapa_24v_psfm_nm.sh  mapa_24v_pt.sh  mapa_24v_pt_apache.sh  mapa_24v_reg.sh  mapa_24v_reg_apache.sh  mapa_24v_reg_sparse.sh  mapa_4v.sh  mapa_4v_apache.sh  pi3x.sh  pi3x_csfm.sh  pi3x_dc.sh  pi3x_mvs.sh  pi3x_pt.sh  pi3x_reg.sh  vggt.sh
bash_scripts/benchmark/rmvd_mvs_benchmark/: generate_benchmark_scripts.py
bash_scripts/train/examples/: mapa_curri_4v_bmvs_48ipg_8g.sh  mapa_img_only_4v_bmvs_48ipg_8g.sh
bash_scripts/train/finetuning/: pi3_finetuning.sh  vggt_midmatch_finetuning.sh
bash_scripts/train/main/: mapa_curri_24v_13d_36ipg_64g.sh  mapa_curri_24v_6d_36ipg_64g_apache.sh  mapa_curri_4v_13d_36ipg_64g.sh  mapa_curri_4v_6d_36ipg_64g_apache.sh  mapa_v1_1.sh  mapa_v1_1_apache.sh
bash_scripts/train/main_v1/: mapa_curri_24v_13d_48ipg_64g.sh  mapa_curri_24v_6d_48ipg_64g_apache.sh  mapa_curri_4v_13d_48ipg_64g.sh  mapa_curri_4v_6d_48ipg_8g_apache.sh
bash_scripts/train/uav_finetuning/: mapa_finetuning_8v_6d_16ipg_2g_mvs.sh  (+21 more)
benchmarking/: README.md
benchmarking/calibration/: README.md  benchmark.py
benchmarking/dense_n_view/: README.md  benchmark.py  benchmark_global_pm_only.py
configs/: debug_dense_n_view_benchmark.yaml  debug_train.yaml  dense_n_view_benchmark.yaml  train.yaml
configs/dataset/: benchmark_504_eth3d_snpp_tav2.yaml  benchmark_518_a3d_enrich_usegeo_us3d.yaml  benchmark_518_a3dsynlfa.yaml  benchmark_518_uavff3d_enrich_usegeo_us3d.yaml  benchmark_518_uavff3d_fa.yaml  default.yaml  uavtrain_3d_518_many_ar_16ipg_2g.yaml  uavtrain_6d_518_many_ar_16ipg_2g.yaml  uavtrain_6d_518_many_ar_32ipg_4g.yaml  uavtrain_a3dreal_518_many_ar_16ipg_2g.yaml  uavtrain_a3dsyn_518_many_ar_16ipg_2g.yaml  uavtrain_a3dsyn_518_many_ar_16ipg_2g_fix_res.yaml  uavtrain_public_518_many_ar_16ipg_2g.yaml  uavtrain_test.yaml  uavtrain_uavff3d_real_518_many_ar_16ipg_2g.yaml  uavtrain_uavff3d_syn_518_many_ar_16ipg_2g.yaml  uavtrain_uavff3d_syn_518_many_ar_16ipg_2g_fix_res.yaml
configs/distributed/: default.yaml
configs/loss/: conf_pm_mask_loss.yaml  conf_pm_mask_scale_loss.yaml  da3_loss.yaml  default.yaml  entangled_metric_loss.yaml  hunyuan_loss.yaml  moge2_loss.yaml  no_depth_loss.yaml  no_log_scaling.yaml  no_points_loss.yaml  no_pose_loss.yaml  no_ray_dirs_loss.yaml  no_robust_loss.yaml  overall_disentangled_loss.yaml  overall_loss.yaml  overall_loss_highpm_hightrans.yaml  overall_loss_highpm_no_log.yaml  overall_loss_highpm_plus_rel_pose.yaml  overall_loss_highpm_plus_rel_pose_no_conf.yaml  overall_loss_highpm_plus_rel_pose_no_conf_no_ref_view.yaml  overall_loss_highpm_rel_pose_no_log.yaml  overall_loss_highpm_rel_pose_no_ref_view.yaml  overall_loss_weigh_pm_higher.yaml  pi3_loss.yaml  semantic.yaml  up_to_scale_loss.yaml  vggt_loss.yaml  vggt_midmatch_loss.yaml
configs/machine/: aws.yaml  default.yaml
configs/model/: da3.yaml  da3_nested.yaml  da3_train.yaml  default.yaml  hunyuan.yaml  hunyuan_train.yaml  mapanything.yaml  mapanything_ablations.yaml  mapanything_da3_camera_head.yaml  mapanything_dino_init.yaml  mapanything_dino_init_no_ref_view.yaml  mapanything_semantic.yaml  mapanything_v1.yaml  mapanything_v1_camera_token.yaml  modular_dust3r_512_dpt.yaml  pi3.yaml  pi3x.yaml  vggt.yaml  vggt_commercial.yaml  vggt_midmatch.yaml  vggt_non_pretrained.yaml
configs/train_params/: da3_finetune.yaml  default.yaml  finetune_heads_only.yaml  finetune_with_lower_encoder_lr.yaml  finetune_with_lower_encoder_lr_64g.yaml  freeze_encoder.yaml  hunyuan_finetune.yaml  lower_encoder_lr.yaml  lower_encoder_lr_64g.yaml  mapa_finetune_encoder_lora.yaml  mapa_finetune_full_lora.yaml  moge2_finetune.yaml  pi3_finetune.yaml  pi3_finetune_encoder_lora.yaml  vggt_finetune.yaml  vggt_finetune_encoder_lora.yaml
data_processing/: README.md  aggregate_scene_names.py  download_and_extract_benchmarking_data.py  viz_data.py
data_processing/wai_processing/: pyproject.toml
data_processing/wai_processing/configs/conversion/: aerialmegadepth.yaml
data_processing/wai_processing/configs/launch/: aerialmegadepth.yaml
data_processing/wai_processing/configs/moge/: default.yaml
data_processing/wai_processing/download_scripts/: README.md  download_aerialmegadepth.py  download_tav2_wb.py
data_processing/wai_processing/scripts/conversion/: aerialmegadepth.py  ase.py
data_processing/wai_processing/utils/: globals.py
mapanything/datasets/: __init__.py
mapanything/loss/: __init__.py  custom_midmatch_loss.py  da3_finetune_loss.py  hunyuan_finetune_loss.py  losses.py
mapanything/models/: __init__.py
mapanything/peft/: __init__.py  lora.py  lora_utils.py
mapanything/train/: profile_dataloading.py  training.py
mapanything/utils/: colmap.py  colmap_export.py  cropping.py  device.py  geometry.py  image.py  inference.py  metrics.py  misc.py  multiview_confidence.py  parallel.py  pointcloud_rendering.py  semantic_fusion.py  timing.py  torch_hub_setup.py  train_tools.py  viz.py  warnings.py
scripts/: convert_all_bundle_json_to_rrd.py  convert_hf_to_benchmark_checkpoint.py  demo_colmap.py  demo_images_only_inference.py  demo_inference_on_colmap_outputs.py  profile_memory_runtime.py  train.py  visualize_benchmark_ply_cams.py  visualize_colmap_format_in_rerun.py  visualize_dataset_rerun.py  visualize_scenes_rerun.py
(+245 files in other folders)
