[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavff3d-evaluate-forward-models"
version = "0.1.0"
description = "Fine-tuning and evaluation code for the UAVFF3D feed-forward UAV 3D reconstruction benchmark"
readme = "README.md"
authors = [{ name = "UAVFF3D Authors" }]
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
dependencies = [
    "huggingface_hub",
    "hydra-core",
    "natsort",
    "numpy",
    "opencv-python-headless==4.10.0.84",
    "orjson",
    "pillow-heif",
    "plyfile",
    "python-box",
    "requests",
    "rerun-sdk~=0.24.1",
    "safetensors",
    "tensorboard",
    "tqdm",
    "trimesh",
    "uniception==0.1.6",
]

[project.optional-dependencies]
data = ["pandas"]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff"]
da3 = ["depth-anything-3 @ file:third_party/depth-anything-3"]
hunyuan = ["hunyuanworld-mirror @ file:third_party/HunyuanWorld-Mirror"]
all = [
    "uavff3d-evaluate-forward-models[data]",
    "uavff3d-evaluate-forward-models[da3]",
    "uavff3d-evaluate-forward-models[hunyuan]",
]

[tool.setuptools]
packages = ["mapanything"]

[tool.setuptools.package-data]
"mapanything" = ["**/*"]

[tool.ruff]
target-version = "py310"
lint.extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
detect-same-package = false
order-by-type = false
known-first-party = ["mapanything", "uniception"]
